--- a/info.html
+++ b/info.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ahoj světe</h1>
+    <h1>toto je info</h1>
 </body>
 </html>
-
